# mlbc

./: .gitignore  .gitmodules  LICENSE  build.sh  configure.sh  install.sh  meson.build  readme.md
res/themes/: dark-theme.json
src/: app.h  colors.cpp  colors.h  constants.h  docking.cpp  docking.h  fileDialog.h  fileDialog.mm  fileWatcher.cpp  fileWatcher.h  image.cpp  image.h  main.cpp  util.cpp  util.h  widgets.cpp  widgets.h
vendors/efsw/lib/: libefsw.dylib
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
